objects/mcdm_15__ScheduledSend__c.object
<CustomObject>
    <description>The record for a scheduled send.</description>
    <fields>
        <fullName>mcdm_15__Bulk_Send_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked bulk send job if this is a scheduled bulk send</description>
        <label>Bulk Send Job</label>
        <referenceTo>mcdm_15__Bulk_Send_Job__c</referenceTo>
        <relationshipLabel>MCDM Scheduled Bulk Send</relationshipLabel>
        <relationshipName>MCDM_ScheduledSend_BulK_Send</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated campaign that this schedule send was created from.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Scheduled Send</relationshipLabel>
        <relationshipName>Scheduled_Send</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Error__c</fullName>
        <description>Shows top level errors related to the scheduled send</description>
        <label>Error</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__External_Journey_Id__c</fullName>
        <description>External ID of the linked journey for this schedule send</description>
        <label>External Journey Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__HasError__c</fullName>
        <description>Is true if there is error in schedule sending or Bulk Send Job.</description>
        <formula>mcdm_15__Has_Errors__c || mcdm_15__Bulk_Send_Job__r.mcdm_15__Has_Errors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Has_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is true if there is error in schedule sending.</description>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__MessageType__c</fullName>
        <description>Type of message for this scheduled send</description>
        <label>Message Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Queueable_Job_Id__c</fullName>
        <description>Associated ID of the queueable apex job for this scheduled send</description>
        <label>Queueable Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Quick_Send_Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated quick send journey that this schedule send was created from.</description>
        <label>Quick Send Message</label>
        <referenceTo>mcdm_15__QuickSendJourney__c</referenceTo>
        <relationshipLabel>Scheduled Send</relationshipLabel>
        <relationshipName>Scheduled_Send</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__ResultJson__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <description>Personalization values in JSON format for this scheduled send</description>
        <label>P13n Json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__SendTime__c</fullName>
        <description>The scheduled date and time of the send</description>
        <inlineHelpText>Fecha y hora a las que se ha programado el envío</inlineHelpText>
        <label>Send Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Status__c</fullName>
        <description>The status of this scheduled send.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MCDM Scheduled Send</label>
    <nameField>
        <displayFormat>DMSS-{000000}</displayFormat>
        <label>MCDM Scheduled Send</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCDM Scheduled Sends</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>